// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> with mock IO should call critical fixed images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    id="testid"
    style="background-position: center; background-repeat: repeat-y; background-size: contain; position: relative; display: inline-block; opacity: 0.99; width: 100px; height: 100px;"
    title="Title for the image"
  >
    <style>
      
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: none;
            background-position: center;
background-repeat: repeat-y;
background-size: contain;

          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            background-image: url('http://localhost/test_fixed_image.jpg');
            
            opacity: 1; 
          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            background-image: url(string_of_base64);
            opacity: 0;
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should call stacked critical fixed images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    id="testid"
    style="background-position: center; background-repeat: repeat-y; background-size: contain; position: relative; display: inline-block; opacity: 0.99;"
    title="Title for the image"
  >
    <style>
      
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: none;
            background-position: center;
background-repeat: repeat-y;
background-size: contain;

          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            background-image: url(http://localhost/test_fixed_image.jpg),url(http://localhost/test_fixed_image.jpg);
            
            opacity: 1; 
          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0;
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should call stacked critical fluid images 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    id="testid"
    style="background-position: center; background-repeat: repeat-y; background-size: contain; position: relative; display: inline; opacity: 0.99;"
    title="Title for the image"
  >
    <style>
      
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: none;
            background-position: center;
background-repeat: repeat-y;
background-size: contain;

          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            background-image: url(string_of_base64),url(string_of_base64);
            
            opacity: 1; 
          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0;
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should not call onLoad without prop, fadeIn should stay falsy without seenBefore 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass  gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    id="testid"
    style="background-position: center; background-repeat: repeat-y; background-size: contain; position: relative; display: inline-block; opacity: 0.99; width: 100px; height: 100px;"
    title="Title for the image"
  >
    <style>
      
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 500ms;
            background-position: center;
background-repeat: repeat-y;
background-size: contain;

          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            background-image: url('http://localhost/test_fixed_image.jpg');
            
            opacity: 1; 
          }
          .imageClass.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            background-image: url(string_of_base64);
            opacity: 0;
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fixed image and call onLoadFunction 1`] = `
<div>
  <div
    class="gbi-2113735767-73WakrfVbNJBaAmhQtEeDv"
    style="background-position: center; background-repeat: no-repeat; background-size: cover; position: relative; opacity: 0.99;"
  >
    <style>
      
          .gbi-2113735767-73WakrfVbNJBaAmhQtEeDv:before,
          .gbi-2113735767-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gbi-2113735767-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gbi-2113735767-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            
            
          }
        
    </style>
    <noscript />
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fixed image and call onLoadFunction 2`] = `undefined`;

exports[`<BackgroundImage /> with mock IO should render visible fluid image 1`] = `
<div>
  <div
    class="gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    style="background-position: center; background-repeat: no-repeat; background-size: cover; position: relative; opacity: 0.99;"
  >
    <style>
      
          .gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
            
          }
        
    </style>
    <noscript />
  </div>
</div>
`;

exports[`<BackgroundImage /> with mock IO should render visible fluid image 2`] = `undefined`;

exports[`<BackgroundImage /> without IO should call onLoadFunction without IO 1`] = `
<div>
  <div
    alt="Alt text for the image"
    class="imageClass test gbi-1393017994-73WakrfVbNJBaAmhQtEeDv"
    id="testid"
    style="background-position: center; background-repeat: repeat-y; background-size: contain; position: relative; display: inline; opacity: 0.99;"
    title="Title for the image"
  >
    <style>
      
          .imageClass.test.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before,
          .imageClass.test.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: none;
            background-position: center;
background-repeat: repeat-y;
background-size: contain;

          }
          .imageClass.test.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:before {
            z-index: -100;
            background-image: url('http://localhost/test_fluid_image.jpg');
            
            opacity: 1; 
          }
          .imageClass.test.gbi-1393017994-73WakrfVbNJBaAmhQtEeDv:after {
            z-index: -101;
            
            background-image: url(string_of_base64);
            opacity: 0;
          }
        
    </style>
    <noscript />
    <h1>
      test
    </h1>
  </div>
</div>
`;
